RIPE NCC has merged bce9b25a6
* Clean a sonarqube nit [f2c12853c]
* Clean commandaudit in integration tests [0eec93b63]
* Fix getCAStatEvents [360db641a]
* JpaCertificateAuthorityRepository: fix class cast error [a5a732830]
* Add test cases for CaStat methods [9faca1eec]
* SecurityConfig: fix admin UI access when authorization is disabled [52ed3b2ad]
* SecurityConfig: fix provisioning config [cf384d82b]
* SecurityConfig: disable session request cache parameter [c126055eb]
* SecurityConfig: use java method naming conventions [19d678a61]
* OIDC needs to be added in the same chain that it applies to [5401517af]
* Rewrite the SecurityConfig [68edba4c6]
* SonarQube nits [98939469b]
* Fix the disabled test in UpStreamCARequestEntityTest [91937c1d8]
* Build a container with JRE 17 [1c0e6ff2e]
* Truncate instant to ms in ProvisioningCmsSigningTimeStoreTest [543a05e6d]
* Use Instant instead of Timestamp in JpaRoaConfigurationRepository [e69771564]
* Update query in JpaRoaConfigurationRepositoryTest for new types [aee572b62]
* Update shouldFindAllPerCaAndCountPrefixes for new types [9f26fcfc2]
* Two unnecessary imports [cd393d814]
* Adjust ExpireOutgoingResourceCertificateResult to use long [0c401f547]
* Use Instant in PublishedObject(Data|Entry) [1eee1854d]
* Hibernate returns Instant instead of Timestamp [cfe8b4e73]
* Result is a long with Hibernate 6 [2df77ebca]
* Store artefacts for failed builds [b8ca3ff78]
* Use lenient stubbing in UpstreamCaControllerTest [2eed0dc98]
* Use thymeleaf-spring6 and refactor admin tests to Jupiter APIs [3e27c1817]
* Fix incorrect JPQL reference to certificate ids [3edc720ab]
* Use Wiremock for integration test case [1b720adb7]
* CertificationDomainTestCase did not persist KeyPair [a9d90164d]
* Remove usage of RandomUtil [90d284304]
* Use new DefaulTransactionStatus constructor [da9d23a7f]
* Validate.notNull without explanation is deprecated [ec5593ef8]
* Use new Spring Security syntax [eb262c1a3]
* AutoConfigureMetrics is now AutoConfigureO