@@ -9,12 +9,11 @@ import net.ripe.rpki.server.api.dto.RoaConfigurationPrefixData;
 import org.apache.commons.lang.builder.ToStringBuilder;
 import org.apache.commons.lang.builder.ToStringStyle;
 
-import javax.persistence.Column;
-import javax.persistence.Embeddable;
+import jakarta.persistence.Column;
+import jakarta.persistence.Embeddable;
 import java.math.BigInteger;
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Objects.*;
 
@@ -111,6 +110,6 @@ public class RoaConfigurationPrefix {
     }
 
     public static List<RoaConfigurationPrefix> fromData(List<? extends RoaConfigurationPrefixData> data) {
-        return data.stream().map(RoaConfigurationPrefix::new).collect(Collectors.toList());
+        return data.stream().map(RoaConfigurationPrefix::new).toList();
     }
 }
